# TCC

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  globals.h  potentials.c  setup.py  tools.c  tools.h
docs/: README.md
docs/doctrees/: index.doctree  introduction.doctree  modules.doctree  python_scripts.doctree  python_scripts.tcc.doctree  python_wrapper.doctree  running.doctree  setup.doctree  tcc_input_parameters.doctree  tcc_python_scripts.doctree  tcc_python_scripts.file_readers.doctree  tcc_python_scripts.net_clusters.doctree  tcc_python_scripts.tcc.doctree  xyz_specification.doctree
docs/doxygen/: .gitignore  doxyfile
docs/html/: .buildinfo  clusters.html  genindex.html  index.html  (+21 more)
documentation/: XYZ specification.md
dtcc_postprocessing/: README.md
inc/: globals.h  input.h  rings.h  setup.h  stats.h  tools.h  version.h  voronoi_bonds.h
iniparser/: LICENSE
src/: CMakeLists.txt  TCC  a.out  bonds.c  bonds.h  cell_list.c  clusters.h  dynamic_analysis.c  globals.h  input.c  main.c  potentials.h  rings.c  setup.c  setup.h  stats.c  tcc.h  tools.c
src/clusters/: 10A.c  10B.c  10K.c  10MW.c  10O.c  10PAA.c  10PAB.c  10PBB.c  10S.c  10W.c  11A.c  11B.c  11C.c  11E.c  11F.c  11MW.c  11O.c  11PAA.c  11PAB.c  11PBB.c  11S.c  11SB.c  11W.c  12A.c  12B.c  12D.c  12E.c  12K.c  12MW.c  12O.c  12PAA.c  12PAB.c  12PBB.c  12S.c  12SB.c  13A.c  13B.c  13K.c  13MW.c  13PAA.c  (+31 more)
src/dynamicpostprocessing/: tcc_analysis.h
src/iniparser/: Makefile
tcc_python/: README.txt  cluster_to_xyz.py  movie_maker.py  net.py
tcc_python_scripts/: README.txt
test/: box.txt  inputparameters.ini  sample.static_clust  sample.xyz  test.py  test_clusters.py  test_config.static_clust  test_config.xyz
(+556 files in other folders)
