cmake_minimum_required(VERSION 3.1)
project(TCC)
message(STATUS "Is CMAKE INSTALL PREFIX deafult? :${CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT}")
message(STATUS "The source directory of CMAKE: ${CMAKE_SOURCE_DIR}")
IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/bin)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")

add_subdirectory(extern/iniparser/src)
add_subdirectory(src)
